searchAI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searchai
  namespace: searchai
spec:
  replicas: 3
  selector:
    matchLabels:
      app: searchai
  template:
    metadata:
      labels:
        app: searchai
    spec:
      containers:
        - name: searchai
          image: sungjujjang/searchai:20260916-022101
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: searchai-service
  namespace: searchai
spec:
  selector:
    app: searchai
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
