searchAI/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searchai-ingress
  namespace: searchai
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`searchai.sungju.xyz`)
      services:
        - name: searchai-service
          port: 3000
